--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,18 @@
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.1.7",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.0",
+    "angular-calendar": "^0.31.0",
+    "angularx-flatpickr": "^7.3.0",
     "bootstrap": "^5.3.0",
+    "calendar-utils": "^0.10.4",
+    "date-fns": "^2.30.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
