--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -199,6 +199,13 @@
 			<artifactId>lombok</artifactId>
 
 		</dependency>
+<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.5.3.Final</version>
+		</dependency>
+
 
 
 	</dependencies>
