--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "angular-calendar": "^0.31.0",
     "angularx-flatpickr": "^7.3.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-jquery": "^3.3.2",
     "calendar-utils": "^0.10.4",
     "date-fns": "^2.30.0",
     "rxjs": "~7.8.0",
