--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.main.web-application-type=none
 server.servlet.context-path=/
 spring.jpa.show-sql=true
-
-
-
+#secret key 
+# App Properties
+jwt.secret= ======================BezKoder=Spring===========================
+jwt.ExpirationMs=86400000
+jwt.CookieName= bezkoder
+#spring.jackson.default-property-inclusion=NON_NULL
