--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,7 +10,9 @@ server.servlet.context-path=/
 spring.jpa.show-sql=true
 #secret key 
 # App Properties
-jwt.secret= ======================BezKoder=Spring===========================
-jwt.ExpirationMs=86400000
+
+
 jwt.CookieName= bezkoder
+jwt.secret= ======================BezKoder=Spring===========================
+jwt.ExpirationMs= 30000
 #spring.jackson.default-property-inclusion=NON_NULL
