--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.show-sql=true
 
 jwt.CookieName= bezkoder
 jwt.secret= ======================BezKoder=Spring===========================
-jwt.ExpirationMs= 30000
+jwt.ExpirationMs= 30000000
 #spring.jackson.default-property-inclusion=NON_NULL
