--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,8 +10,10 @@ server.servlet.context-path=/
 spring.jpa.show-sql=true
 #secret key 
 # App Properties
-
-
+rapidAPI.url=https://holidays-by-api-ninjas.p.rapidapi.com/v1/holidays?country=MA&year=2023
+rapidAPI.xRapidApiKey=35f59eb484mshc42d86565a829c6p1c8a82jsn4618679821f6
+rapidAPI.getxRapidApiHost=holidays-by-api-ninjas.p.rapidapi.com
+# api.key=p9912krcon0brd4nobt804d19plv2h82ec2al9bmt6sjt0iqbq5o
 jwt.CookieName= bezkoder
 jwt.secret= ======================BezKoder=Spring===========================
 jwt.ExpirationMs= 30000000
