--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myapp",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -14,27 +14,27 @@
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
-    "@angular/forms": "^16.1.0",
-    "@angular/material": "^16.1.7",
+    "@angular/forms": "^16.2.12",
+    "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^16.1.0",
-    "@angular/platform-browser-dynamic": "^16.1.0",
-    "@angular/router": "^16.1.0",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
     "@fortawesome/angular-fontawesome": "^0.13.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.2",
-    "@ng-bootstrap/ng-bootstrap": "^15.1.0",
-    "angular-calendar": "^0.31.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "angular-calendar": "^0.31.1",
     "angularx-flatpickr": "^7.3.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.3",
     "bootstrap-jquery": "^3.3.2",
     "calendar-utils": "^0.10.4",
     "date-fns": "^2.30.0",
-    "material-icons": "^1.13.11",
+    "material-icons": "^1.13.12",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "tslib": "^2.7.0",
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.4",
+    "@angular-devkit/build-angular": "^16.2.15",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
