--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/LeaveMS?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 #spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root2023
 #spring.jpa.properties.hibernate.dialect.storage_engine=innodb
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.main.web-application-type=none
 server.servlet.context-path=/
@@ -18,3 +18,4 @@ jwt.CookieName= bezkoder
 jwt.secret= ======================BezKoder=Spring===========================
 jwt.ExpirationMs= 30000000
 #spring.jackson.default-property-inclusion=NON_NULL
+spring.sql.init.mode=always
