--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -66,15 +66,15 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "myapp:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "proxyConfig": "src/proxy.conf.json",
+            "buildTarget": "myapp:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "myapp:build:production"
+              "buildTarget": "myapp:build:production"
             },
             "development": {
-              "browserTarget": "myapp:build:development"
+              "buildTarget": "myapp:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -82,7 +82,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "myapp:build"
+            "buildTarget": "myapp:build"
           }
         },
         "test": {
